--- a/mineos.conf
+++ b/mineos.conf
@@ -1,12 +1,12 @@
 use_https = true
 socket_host = '0.0.0.0'
 socket_port = 8443
-base_directory = '/var/games/minecraft'
+base_directory = '/opt/minecraft'
 
-ssl_private_key = '/etc/ssl/certs/mineos.key'
-ssl_certificate = '/etc/ssl/certs/mineos.crt'
+ssl_private_key = '/etc/pki/tls/certs/mineos.key'
+ssl_certificate = '/etc/pki/tls/certs/localhost.crt'
 ssl_cert_chain = ''
 
-webui_locale = 'en_US'
+webui_locale = 'es_va'
 additional_logfiles = ''
 optional_columns = ''
