--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "adm-zip": "^0.4.11",
     "angular": "1.5.x",
     "angular-moment": "1.0.x",
-    "angular-sanitize": "1.5.x",
-    "angular-translate": "^2.18.2",
+    "angular-sanitize": "^1.3.0",
+    "angular-translate": "^2.18.1",
     "apache-crypt": "1.1.x",
     "async": "1.5.x",
-    "axios": "^0.24.0",
+    "axios": "^1.12.2",
     "bindings": "1.5.0",
     "body-parser": "^1.19.0",
     "chownr": "1.1.x",
@@ -51,16 +51,16 @@
     "line-by-line": "^0.1.6",
     "mcquery": "0.2.x",
     "method-override": "^2.3.10",
-    "moment": "2.21.x",
+    "moment": "^2.30.1",
     "moment-duration-format": "1.3.x",
     "moment-timezone": "^0.5.17",
     "node-addon-api": "3.1.0",
     "node-getopt": "^0.2.4",
     "node-uuid": "1.4.x",
     "object-hash": "1.1.x",
-    "passport": "0.3.x",
+    "passport": "^0.7.0",
     "passport-local": "1.0.x",
-    "passport.socketio": "3.6.x",
+    "passport.socketio": "^3.7.0",
     "posix": "^4.2.0",
     "procfs-stats": "1.0.x",
     "q": "1.4.x",
@@ -68,12 +68,12 @@
     "request-progress": "0.3.x",
     "rsync": "0.6.x",
     "sha512crypt-node": "0.1.x",
-    "socket.io": "1.7.x",
+    "socket.io": "^4.8.1",
     "strftime": "0.9.x",
     "tail": "1.2.1",
-    "tar": "^4.4.18",
+    "tar": "^7.5.1",
     "tarball-extract": "0.0.3",
-    "tmp": "0.0.33",
+    "tmp": "^0.2.5",
     "unzipper": "0.10.11",
     "urllib": "^2.34.1",
     "userid": "1.0.0-beta.9",
@@ -81,9 +81,9 @@
     "which": "1.2.x",
     "whoami": "0.0.x",
     "winston": "1.1.x",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "nodeunit": "^0.11.3"
+    "nodeunit": "^0.10.2"
   }
 }
